--- a/resources/mails/index.mjml
+++ b/resources/mails/index.mjml
@@ -1,7 +1,8 @@
 <mjml>
   <mj-body>
-    <mj-section>
-      <mj-column>
+    <mj-include path="./partials/head/header.mjml" />
+    <mj-section> 
+      <mj-column> 
         <mj-image width="100px" src="https://mjml.io/assets/img/logo-small.png"></mj-image>
         <mj-divider border-color="#F45E43"></mj-divider>
         <mj-text font-size="20px" color="#F45E43" font-family="helvetica">Hello dsad World</mj-text>
@@ -9,3 +10,4 @@
     </mj-section>
   </mj-body>
 </mjml>
+ 
